Fix large mockup image on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1 {
   padding-top: 70px;
 }
 
-#title-row img {
+.shrinkimg80 {
   width: 80%;
 }
 
